# SysY_Compiler

./: README.md
AST/bison/code/: Makefile  ast.c  ast.h  lex.yy.c  log.txt  lrlex.l  lrparser.y  main.c  rdparser  test.sh  y.output  y.tab.c  y.tab.h
AST/bison/lab3/: calc1.l  calc1.y  calc2.tab.c  calc2.tab.h  lex.yy.c  lrparser2  实验 LR语法分析.ppt
AST/bison/lab3/lrparser/: .cproject  .project  CMakeLists.txt  Makefile  ast.h  calc3.l  lex.yy.c  main.c
AST/code/: auto_lex.l  lex.yy.c  rdcheck  rdcheck.c  rdparser  rdparser.c  scan  sysy_lex.l  test.c
AST/lab2/: astResult.txt  lex.yy.c  rdgram.txt  rdparser1.c  scan  tempCodeRunnerFile.c  实验2-递归下降语法分析.docx
AST/manual/code/: lex.yy.c  rdcheck.c  rdparser.c  scan  sysy_lex.l  tok.h
AST/manual/lab2/: expr.txt  rdparser  rdparser1  实验2 递归下降语法分析.ppt
Flexer/code/: auto_lex.l  lex.yy.c  man_lex.c  man_lex.h  scan
Flexer/lab1/: SysY语言定义.docx  gram.txt  words_count.l  实验1 词法分析-嵌入式.pptx  实验1-词法分析.docx  注释匹配.dps  说明.txt
GenCode/code/: genllvm  genllvm.c  genllvm.h  lex.yy.c  lrlex.l  lrparser.tab.c  lrparser.tab.h  lrparser.y  main.c  makefile  test.sh  tree.c  tree.h
GenCode/code/output/: output0.txt  output10.txt  output102.txt  output105.txt  output107.txt  output11.txt  output110.txt  output111.txt  output12.txt  output13.txt  output15.txt  output16.txt  output18.txt  output19.txt  output21.txt  output23.txt  output25.txt  output26.txt  output27.txt  output28.txt  output3.txt  output30.txt  output31.txt  output32.txt  (+49 more)
GenCode/lab4/: llvm_example.c  llvm_example.ll  实验4 LLVM代码生成.ppt
test_cases/: 00_main.s
(+16 files in other folders)
